Changed z-index for the access element. IE 11 bug fixes.

--- a/src/assets/_project/_blocks/layout/header/_access.scss
+++ b/src/assets/_project/_blocks/layout/header/_access.scss
@@ -1,5 +1,5 @@
 #qg-access{
-	z-index: 9;
+	z-index: 11;
 	width: 100%;
 	position: relative;
 	background: #444;
